--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,11 +4,11 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "panels",
+      "label": "images",
       "type": "shell",
       "command": "make",
       "args": [
-        "panels"
+        "images"
       ],
       "problemMatcher": [
         "$go",
